docs: allow long inline code to wrap to prevent overflow on mobile
(cherry picked from commit f9d4dce604fd1688a690daaac32c4221a60f4205)

--- a/docs/style.css
+++ b/docs/style.css
@@ -568,6 +568,7 @@ tbody td {
 code.highlighter-rouge {
   padding: 2px 6px;
   background-color: var(--sd-highlight-inline-bg);
+  overflow-wrap: anywhere;
 }
 
 a code.highlighter-rouge {
